--- a/templates/about.html
+++ b/templates/about.html
@@ -6,9 +6,9 @@
 
 {% block body %}
 <h2 class="exo-terzo">Our Story</h2>
-<p class="share-tech-mono-regular">This project provides a basic framework that can be developed into any number of different applications. </p>
+<p>This project provides a basic framework that can be developed into any number of different applications. </p>
 <p>This project has been tailored to be run on the Heroku cloud platform.</p>
-<p class="share-tech-mono-regular">NB: This site is being run in <bold>Experimental Mode</bold> and may have an adverse effect on the space-time continuium.</bold></p>
+<p>NB: This site is being run in <bold>Experimental Mode</bold> and may have an adverse effect on the space-time continuium.</bold></p>
 
 
 <ul>
