--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <h2 class="exo-terzo">Contact Us</h2>
-<p class="share-tech-mono-regular">To reach <a href="http://www.terzotechnical.com" target="_blank">Terzo Technical &#11193;</a> 
+<p>To reach <a href="http://www.terzotechnical.com" target="_blank">Terzo Technical &#11193;</a> 
     please contact <a href="https://shannonware.com" target="_blank">Shannon Ware &#11193;</a>
      at <a href=mailto:photius@shannonware.com?subject=Incoming%20Email%20from%20Internet%20Web%20Page&body=Hello%20Terzo%20Technical!%20 target="_blank">photius at shannon ware dot com &#11193;</a>.</p>
 {% endblock %}
