--- a/templates/terms.html
+++ b/templates/terms.html
@@ -6,11 +6,11 @@
 
 {% block body %}
 <h2>Terms of Use</h2>
-<p class="share-tech-mono-regular">Internet Web Page is provided as-is and without warranty. </p>
+<p>Internet Web Page is provided as-is and without warranty. </p>
 <h3>Advisory</h3>
-<p class="share-tech-mono-regular">This site is being run in <bold>Experimental Mode</bold> and may have an adverse effect on the space-time continuium.</bold></p>
+<p>This site is being run in <bold>Experimental Mode</bold> and may have an adverse effect on the space-time continuium.</bold></p>
 <h3>Disclaimer</h3>
-<p class="share-tech-mono-regular">To the extent permitted by law, we exclude all warranties, express, statutory, or impled.
+<p>To the extent permitted by law, we exclude all warranties, express, statutory, or impled.
     We expressly disclaim the warranties or conditios of noninfringement, merchantability, and fitness for a particular purpose.
 </p>
 
