--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,13 @@
     <meta name="HandheldFriendly" content="true" />
     <meta name="MobileOptimized" content="320" />
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=device-width, user-scalable=no" />
+    <meta name="google-adsense-account" content="ca-pub-5714407334718985">
     <!-- OK link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css" -->
     <script src="{{ url_for('static', filename='terzo.js') }}"></script>
     <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&family=Share+Tech+Mono&family=Special+Elite&family=Syne+Mono&family=Tillana&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='terzo.css') }}">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5714407334718985" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5714407334718985"
+     crossorigin="anonymous"></script>
     {% block head %}{% endblock %}
 </head>
 <body>
