Push updaded adsense credentials; add back buttons

--- a/templates/terms.html
+++ b/templates/terms.html
@@ -14,6 +14,9 @@
     We expressly disclaim the warranties or conditios of noninfringement, merchantability, and fitness for a particular purpose.
 </p>
 
+<button id="back_button" onclick="history.back()">&#9665; Back</button>
+<button id="back_button" disabled>Forward &#9655; </button>
+
 {% endblock %}
 
 ###
