--- a/templates/about.html
+++ b/templates/about.html
@@ -43,5 +43,8 @@
         Making a profit is not a bad thing it is your duty to the society that is endowed you.</li>
 
 </ul>
+<button id="back_button" onclick="history.back()">&#9665; Back</button>
+<button id="back_button" disabled>Forward &#9655; </button>
+
 {% endblock %}
 
