--- a/templates/error_404.html
+++ b/templates/error_404.html
@@ -7,4 +7,7 @@
 {% block body %}
 <h2 class="exo-terzo">Error: 404 Rizz Not Found</h2>
 <p><img src="/static/Rizz-Not-Found_10MAY2024.png"></p>
+
+<button id="back_button" onclick="history.back()">&#9665; Back</button>
+<button id="back_button" disabled>Forward &#9655; </button>
 {% endblock %}
