Implement forward buttons

--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -10,5 +10,5 @@
 <p>Information regarding the advertising activities conducted by this website will be posted here.</p>
 
 <button id="back_button" onclick="history.back()">&#9665; Back</button>
-<button id="back_button" disabled>Forward &#9655; </button>
+<button id="back_button"  onclick="history.forward()">Forward &#9655; </button>
 {% endblock %}
