--- a/templates/about.html
+++ b/templates/about.html
@@ -44,7 +44,7 @@
 
 </ul>
 <button id="back_button" onclick="history.back()">&#9665; Back</button>
-<button id="back_button" disabled>Forward &#9655; </button>
+<button id="back_button"  onclick="history.forward()">Forward &#9655; </button>
 
 {% endblock %}
 
