--- a/templates/terms.html
+++ b/templates/terms.html
@@ -11,11 +11,11 @@
 <p>This site is being run in <bold>Experimental Mode</bold> and may have an adverse effect on the space-time continuium.</bold></p>
 <h3>Disclaimer</h3>
 <p>To the extent permitted by law, we exclude all warranties, express, statutory, or impled.
-    We expressly disclaim the warranties or conditios of noninfringement, merchantability, and fitness for a particular purpose.
+    We expressly disclaim the warranties or conditions of noninfringement, merchantability, and fitness for a particular purpose.
 </p>
 
 <button id="back_button" onclick="history.back()">&#9665; Back</button>
-<button id="back_button" disabled>Forward &#9655; </button>
+<button id="back_button"  onclick="history.forward()">Forward &#9655; </button>
 
 {% endblock %}
 
