Repurpose heroku-minima for alex-freberg-cv

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     {% block head %}{% endblock %}
 </head>
 <body>
-    <div id="banner"><a href="/" class="header_one"><h1 class="syne-mono-regular">Internet Web Page</h1></a></div>
+    <div id="banner"><a href="/" class="header_one"><h1 class="syne-mono-regular">Shannon Douglas Ware</h1></a></div>
     
     <div id="content">
     {% block body %}{% endblock %}
