--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,13 @@
 {% endblock %}
 
 {% block body %}
-<h2 class="exo-terzo">Welcome!</h2>
-<p>Welcome to Internet Web Page, brought to you by <a href="http://www.terzotechnical.com" target="_blank">Terzo Technical &#11193;</a> and <a href="https://shannonware.com" target="_blank">Shannon Ware &#11193;</a>.</p>
-<p><a href="/about">Our Story</a> is a harrowing tale filled with trial and triumph. Please take a moment to read <a href="/about">Our Story</a>.</p>
-<h3>StageMaster AI Voice Actor Coordinator</h3>
-<p>StageMaster, Ventriloquist, and Puppeteer are the latest suite of streaming production tools from Terzo Technical.</p>
-<a href="/static/Stage-Master-WIP-UI_10MAY2024.png" target="_blank"><img class="resize" src="/static/Stage-Master-WIP-UI_10MAY2024.png"></a>
+
+<img/>
+<h2 class="exo-terzo">At your service!</h2>
+<h3>Resumes</h3>
+<a href="">Technical Support</a>
+<h3>Portfolio</h3>
+<a href="">Data Engineer</a>
+<h3>Cirriculum Vite</h3>
+<a href="">Shannon Ware CV</a>
 {% endblock %}
