--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,23 @@
 
 {% block body %}
 
-<img/>
+<img src="/static/shannon-ware-professional-avatar.png" role="avatar" id="avatar"/>
 <h2 class="exo-terzo">At your service!</h2>
+    <p>Shannon has a demonstrated ability reduce cost while improving production service quality.</p>
+    <p>Shannon has a deep knowledge of industry analytical tools and methods including open source (Python) integration with proprietary tools (Microsoft).</p>
 <h3>Resumes</h3>
-<a href="">Technical Support</a>
+<ul>
+    <li><a href="/resume-support-engineer">Support Engineer</a></li>
+    <li><a href="/resume-data-engineer">Data Engineer</a></li>
+    <li><a href="/resume-full-stack-developer">Full Stack Developer</a></li>
+    <li><a href="/resume-administrator">Administrator</a></li>
+</ul>
 <h3>Portfolio</h3>
-<a href="">Data Engineer</a>
-<h3>Cirriculum Vite</h3>
-<a href="">Shannon Ware CV</a>
+<ul>
+    <li><a href="/portfolio-data-engineer">Data Engineer</a></li>
+</ul>
+<h3>Curriculum Vitae</h3>
+<ul>
+    <li><a href="/curriculum-vitae">Shannon Ware CV</a></li>
+</ul>
 {% endblock %}
