--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Internet Web Site by Terzo Technical</title>
+    <title>Shannon Douglas Ware - Resumes - Curriculum Vitae - Support Engineer - Service Architect</title>
     <meta name="HandheldFriendly" content="true" />
     <meta name="MobileOptimized" content="320" />
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=device-width, user-scalable=no" />
@@ -8,6 +8,8 @@
     <!-- OK link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css" -->
     <script src="{{ url_for('static', filename='terzo.js') }}"></script>
     <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&family=Share+Tech+Mono&family=Special+Elite&family=Syne+Mono&family=Tillana&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='terzo.css') }}">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5714407334718985"
      crossorigin="anonymous"></script>
@@ -22,7 +24,7 @@
 
     <div id="footer">
 
-        Copyright 2024 Terzo Technical. All rights reserved.
+        Copyright 2024-2025 Terzo Technical
         
         <br>
         &#62;
