--- a/templates/curriculum-vitae.html
+++ b/templates/curriculum-vitae.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 
 {% block head %}
+<title>Shannon Douglas Ware - CV - Technical Consultant, Workvivo - Zoom - 20 JAN 2025</title>
 
 {% endblock %}
 
 {% block body %}
 
-<p id="occupation">Curriculum Vitae</p>
+<p id="occupation">Technical Consultant, Workvivo</p>
 <p id="address">
     <span>Mobile: 083-441-0345 Home: 083-386-2345</span>
     <span>The Shop, Gerahies, Bantry, Co Cork P75 AK37 Ireland</span>
@@ -22,8 +23,8 @@
         <ul>
             <li>C#: LINQ, Visual Studio</li>
             <li>Python: Flask, Hugging Face, Pandas, Ollama</li>
-            <li>JavaScript: REACT, ES6</li>
-            <li>SQL: PostgreSQL, SQLite</li>
+            <li>JavaScript: Node.js, REACT, ES6</li>
+            <li>SQL: Integrations, PostgreSQL, SQLite</li>
         </ul>
     </div>
     <div id="skills_right">
@@ -119,11 +120,7 @@
 <ul>
     <li>Articulated written justification of evaluation decision made according to continuously evolving criteria</li>
     <li>Exhibited energy and commitment to teamwork and workflow development</li>
-    <li>Analysed Apple Maps inbound dataset against Google Maps and Streetview, Bing Maps, Yandex and others</li>
-    <li>Designed and built Python apps to better manipulate system data, achieving reduction of costs from service downtime</li>
-    <li>L2 Help Desk: Provided hands-on support; conducted customer issue root cause investigation; executed service delivery audit processes</li>
-    <li>L3 Help Desk: Made accurate records of service performance for monthly reports</li>
-    <li>Execute backend query, render results as meaningful data for data-driven decision making</li>
+    <li>Analyzed Apple Maps inbound dataset against Google Maps and Streetview, Bing Maps, Yandex and others</li>
 </ul>
 
 <p class="entry_headline">
