Render index page at 2x

--- a/templates/curriculum-vitae.html
+++ b/templates/curriculum-vitae.html
@@ -9,7 +9,7 @@
 
 <p id="occupation">Technical Consultant, Workvivo</p>
 <p id="address">
-    <span>Mobile: 083-441-0345 Home: 083-386-2345</span>
+    <span>Mobile: 083-441-0345 | photius@shannonware.com</span>
     <span>The Shop, Gerahies, Bantry, Co Cork P75 AK37 Ireland</span>
     <span>https://www.shannonware.com</span>
     <!-- span>https://www.terzotechnical.com</span -->
@@ -21,17 +21,17 @@
 <section>
     <div id="skills_left">
         <ul>
-            <li>C#: LINQ, Visual Studio</li>
-            <li>Python: Flask, Hugging Face, Pandas, Ollama</li>
+            <li>C#: LINQ, Visual Studio, Git, CI/CD</li>
+            <li>Python: Flask, Heroku, Hugging Face, Pandas, Ollama</li>
             <li>JavaScript: Node.js, REACT, ES6</li>
             <li>SQL: Integrations, PostgreSQL, SQLite</li>
         </ul>
     </div>
     <div id="skills_right">
         <ul>
-            <li>CI/CD: Git, Heroku, VS Code</li>
-            <li>Linux: Lubuntu, CentOS, Debian</li>
-            <li>MS Office, Exce, Word, Team, PowerPoint</li>
+            <li>Google: Cloud, Analytics, Workspaces, Android</li>
+            <li>Linux: Lubuntu, CentOS, Debian, Node.js, VS Code for Linux</li>
+            <li>Microsoft: Azure, Office, Excel, Word, Team, PowerPoint</li>
             <li>OBS, Audacity, Davinci Resolve, PyAudio</li>
         </ul>
     </div>
@@ -59,7 +59,7 @@
 </ul>
 
 <p class="entry_headline">
-    <span class="entry_title">DoD / DDF</span>
+    <span class="entry_title">DoD / DF</span>
     <span class="entry_description">Fujitsu Project Management - Swords, Dublin</span>
     <span class="entry_date">April 2024</span>
 </p>
@@ -80,7 +80,8 @@
     <!-- li>Champion website accessibility and full stack web development</li -->
     <!-- li>Designed and developed Windows apps, including C# desktop front-end for PostgreSQL DB</li -->
     <li>Designed built and deployed Flask apps to Heroku for advertisement and lead generation</li>
-    <li>Complete point of sale transactions with handheld payment device. Ensure customer goods maintain all required quality standards and specifications</li>
+    <li>Complete point of sale transactions with handheld payment device.</li>
+    <li>Ensure customer goods maintain all required quality standards and specifications</li>
     <li>Assist end-users with online account merchant, banking, and e-government account configuration</li>
 </ul>
 
@@ -92,9 +93,10 @@
 </p>
 <ul>
     <li>Warrant fit for purpose core service architecture and process documents for Oracle eBS</li>
-    <li>Drive production task estimation, allocation, and fulfilment follow-up</li>
+    <li>Junior Project Manager: Drive production task estimation, allocation, and fulfilment follow-up</li>
     <li>Automate export and Excel manipulation of daily report data.</li>
     <li>Fulfil proactive communication facilitator role as a liaison between production teams and senior management</li>
+    <li>Junior Project Manager: </li>
 </ul>
 
 <p class="entry_headline">
