--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 
 {% block head %}
 
+<link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
+
 {% endblock %}
 
 {% block body %}
