Remove guideline from index header one

--- a/templates/curriculum-vitae.html
+++ b/templates/curriculum-vitae.html
@@ -21,7 +21,7 @@
 <section>
     <div id="skills_left">
         <ul>
-            <li>C#: LINQ, Visual Studio, Git, CI/CD</li>
+            <li>C#: 6-8, LINQ, Visual Studio, Git, CI/CD</li>
             <li>Python: Flask, Heroku, Hugging Face, Pandas, Ollama</li>
             <li>JavaScript: Node.js, REACT, ES6</li>
             <li>SQL: Integrations, PostgreSQL, SQLite</li>
