--- a/static/index.css
+++ b/static/index.css
@@ -5,7 +5,7 @@ body {
 }
 
 h1 {
-    border: 1px solid black;position: sticky;
+    /* border: 1px solid black;position: sticky; */
     top: 0;
     /* background-color: #c4f4ff;
     border-bottom: 2px solid grey;
