--- a/templates/curriculum-vitae.html
+++ b/templates/curriculum-vitae.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Shannon Douglas Ware - CV - Technical Consultant, Workvivo - Zoom - 20 JAN 2025</title>
+<title>Shannon Douglas Ware - CV - Junior IT Software Developer – Python and/or Javascript - Qualcomm - 21 JAN 2025</title>
 
 {% endblock %}
 
 {% block body %}
 
-<p id="occupation">Technical Consultant, Workvivo</p>
+<p id="occupation">Junior IT Software Developer – Python and/or Javascript</p>
 <p id="address">
     <span>Mobile: 083-441-0345 | photius@shannonware.com</span>
-    <span>The Shop, Gerahies, Bantry, Co Cork P75 AK37 Ireland</span>
+    <span>The Shop, Gerahies, Bantry, Co. Cork P75 AK37, Ireland</span>
     <span>https://www.shannonware.com</span>
     <!-- span>https://www.terzotechnical.com</span -->
     <span>https://github.com/spycebot/</span>
@@ -31,7 +31,7 @@
         <ul>
             <li>Google: Cloud, Analytics, Workspaces, Android</li>
             <li>Linux: Lubuntu, CentOS, Debian, Node.js, VS Code for Linux</li>
-            <li>Microsoft: Azure, Office, Excel, Word, Team, PowerPoint</li>
+            <li>Microsoft: RDP, Azure, Office, Excel, Word, Team, PowerPoint</li>
             <li>OBS, Audacity, Davinci Resolve, PyAudio</li>
         </ul>
     </div>
