--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 <h2 class="exo-terzo">At your service!</h2>
     <p>Shannon has a demonstrated ability reduce cost while improving production service quality.</p>
     <p>Shannon has a deep knowledge of industry analytical tools and methods including open source (Python) integration with proprietary tools (Microsoft).</p>
-<h3>Resumes</h3>
+<!-- h3>Resumes</h3>
 <ul>
     <li><a href="/resume-support-engineer">Support Engineer</a></li>
     <li><a href="/resume-data-engineer">Data Engineer</a></li>
@@ -22,6 +22,10 @@
 <h3>Portfolio</h3>
 <ul>
     <li><a href="/portfolio-data-engineer">Data Engineer</a></li>
+</ul -->
+<h3>Interview</h3>
+<ul>
+    <li><a href="/problems-solved">Problems Solved</a></li>
 </ul>
 <h3>Curriculum Vitae</h3>
 <ul>
