--- a/templates/problems-solved.html
+++ b/templates/problems-solved.html
@@ -8,6 +8,13 @@
 
 {% block body %}
 
+<p>"Tell me about a time when you solved a problem using a database query, and then documented your solution.</p>
+<h2>Problems Solved</h2>
+<p>We solve problems in daily life every day, sometimes every hour, or even fraction thereof. 
+    Specifically, with reference to a time where I solved a problem in the workplace by using a database query, I offer the following episode. 
+    Further to your question, I documented my solution as follows.
+
+</p>
 <table>
     <tr>
         <th>Situation</th>
