--- a/templates/curriculum-vitae.html
+++ b/templates/curriculum-vitae.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Shannon Douglas Ware - CV - Junior IT Software Developer – Python and/or Javascript - Qualcomm - 21 JAN 2025</title>
+<title>Shannon Douglas Ware - CV - Curriculum Vitae</title>
 
 {% endblock %}
 
 {% block body %}
 
-<p id="occupation">Junior IT Software Developer – Python and/or Javascript</p>
+<p id="occupation">Curriculum Vitae</p>
 <p id="address">
     <span>Mobile: 083-441-0345 | photius@shannonware.com</span>
     <span>The Shop, Gerahies, Bantry, Co. Cork P75 AK37, Ireland</span>
