Add problem line items and barista resume

--- a/templates/barista.html
+++ b/templates/barista.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Shannon Douglas Ware - CV - Curriculum Vitae</title>
+<title>Shannon Douglas Ware - Resume - Cafe Assistant</title>
 
 {% endblock %}
 
 {% block body %}
 
-<p id="occupation">Curriculum Vitae</p>
+<p id="occupation">Cafe Assistant</p>
 <p id="address">
     <span>Mobile: 083-441-0345 | photius@shannonware.com</span>
     <span>The Shop, Gerahies, Bantry, Co. Cork P75 AK37, Ireland</span>
@@ -21,18 +21,18 @@
 <section>
     <div id="skills_left">
         <ul>
-            <li>C#: 6-8, LINQ, Visual Studio, Git, CI/CD</li>
-            <li>Python: Flask, Heroku, Hugging Face, Pandas, Ollama</li>
-            <li>JavaScript: Node.js, REACT, ES6</li>
-            <li>SQL: Integrations, PostgreSQL, SQLite</li>
+            <li>Coffee: Espresso, cappuccino, latte, americano, macchiato</li>
+            <li>Tea: Black, Earl Grey, English Breakfast, Herbal, Green, White</li>
+            <li>Cafe Management: Hygiene, till management, drinks service</li>
+            <li>Customer Service: Active listening, overcoming objections</li>
         </ul>
     </div>
     <div id="skills_right">
         <ul>
-            <li>Google: Cloud, Analytics, Workspaces, Android</li>
-            <li>Linux: Lubuntu, CentOS, Debian, Node.js, VS Code for Linux</li>
-            <li>Microsoft: RDP, Azure, Office, Excel, Word, Team, PowerPoint</li>
-            <li>OBS, Audacity, Davinci Resolve, PyAudio</li>
+            <li>Retail: Product display, stock rotation</li>
+            <li>Point of Sale: SumUp, in-head arithmetic, till reconciliation</li>
+            <li>Shop Management: Stock ordering, stock projection, inventory</li>
+            <li>Inventory management: Stocktaking, stock ordering</li>
         </ul>
     </div>
 </section>
@@ -45,7 +45,7 @@
 </p>
 <ul>
     <li>Designed and built real time speech-to-text and text-to-speech application </li>
-    <li>Utilized websockets for distributed blocking and on-blocking app behavior</li>
+    <li>Utilized websockets for distributed blocking and on-blocking app behaviour</li>
 </ul>
 
 <p class="entry_headline">
@@ -55,7 +55,7 @@
 </p>
 <ul>
     <li>Coded up text-to-speech AI voice synthesis app to serve as verbal sock puppets</li>
-    <li>Made critical evaluation of text-to-speech technology and user interface blocking behavior</li>
+    <li>Made critical evaluation of text-to-speech technology and user interface blocking behaviour</li>
 </ul>
 
 <p class="entry_headline">
@@ -86,7 +86,7 @@
 </ul>
 
 
-<p class="entry_headline">
+<!-- p class="entry_headline">
     <span class="entry_title">Junior Service Architect</span>
     <span class="entry_description">Fujitsu Ireland - Swords, Dublin</span>
     <span class="entry_date">2022-May 2024</span>
@@ -96,7 +96,8 @@
     <li>Junior Project Manager: Drive production task estimation, allocation, and fulfilment follow-up</li>
     <li>Automate export and Excel manipulation of daily report data.</li>
     <li>Fulfil proactive communication facilitator role as a liaison between production teams and senior management</li>
-</ul>
+    <li>Junior Project Manager: </li>
+</ul -->
 
 <p class="entry_headline">
     <span class="entry_title">Technical Services Specialist</span>
@@ -106,8 +107,8 @@
 <ul>
     <li>Delivered technical support proactively in a fast-paced production environment</li>
     <li>Tracked service levels and service performance in monthly and impromptu reporting</li>
-    <li>Analyzed tabular data and query results to track shipping documentation, delayed or missing stock</li>
-    <li>Designed and built Python apps to better manipulate system data, achieving reduction of costs from service downtime</li>
+    <li>Analysed tabular data and query results to track shipping documentation, delayed or missing stock</li>
+    <!-- li>Designed and built Python apps to better manipulate system data, achieving reduction of costs from service downtime</li -->
     <li>L2 Help Desk: Provided hands-on support; conducted customer issue root cause investigation; executed service delivery audit processes</li>
     <li>L3 Help Desk: Made accurate records of service performance for monthly reports</li>
     <li>Execute backend query, render results as meaningful data for data-driven decision making</li>
@@ -121,10 +122,10 @@
 <ul>
     <li>Articulated written justification of evaluation decision made according to continuously evolving criteria</li>
     <li>Exhibited energy and commitment to teamwork and workflow development</li>
-    <li>Analyzed Apple Maps inbound dataset against Google Maps and Streetview, Bing Maps, Yandex and others</li>
+    <li>Analysed Apple Maps inbound dataset against Google Maps and Streetview, Bing Maps, Yandex and others</li>
 </ul>
 
-<p class="entry_headline">
+<!-- p class="entry_headline">
     <span class="entry_title">Japanese>English Translation Contractor</span>
     <span class="entry_description">Linguistic Systems, KJI Project Solutions, Transperfect Translations, Gongwell Services, and others</span>
     <span class="entry_date">2010-2015</span>
@@ -159,6 +160,16 @@
     <li>Lead custom video game project management and game asset development</li>
     <li>Achieved Unity/C# based custom system hardware configuration game development</li>
 
+</ul -->
+
+<p class="entry_headline">
+    <span class="entry_title">Cafe Manager</span>
+    <span class="entry_description">Birds and Beans - Toronto, Ontario</span>
+    <span class="entry_date">2005-Mar 2008</span>
+<ul>
+    <li>Lead custom video game project management and game asset development</li>
+    <li>Achieved Unity/C# based custom system hardware configuration game development</li>
+
 </ul>
 
 
@@ -176,7 +187,7 @@
     <li>Data structure and algorithm optimization</li>
 </ul>
 
-<p class="entry_headline">
+<!-- p class="entry_headline">
     <span class="entry_title">Ontario College Graduate Certificate, Digital Design - Game Design</span>
     <span class="entry_description">George Brown College – Toronto, Ontario</span>
     <span class="entry_date">2007</span>
@@ -208,7 +219,7 @@
     <li>First had training in occupational Japanese in commercial environments</li>
     <li>In depth analysis of Japanese economic and cultural trends</li>
     <li>Japanese work environment teamwork exercises</li>
-</ul>
+</ul -->
 
 
 
