Implement WIP portfolio and WIP JavaScript One Page

--- a/templates/curriculum-vitae.html
+++ b/templates/curriculum-vitae.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Shannon Douglas Ware - CV - Curriculum Vitae</title>
+<title>Shannon Douglas Ware - CV - IT Support Specalist - Reperio Human Capital (Ireland) Ltd</title>
 
 {% endblock %}
 
 {% block body %}
 
-<p id="occupation">Curriculum Vitae</p>
+<p id="occupation">IT Support Specalist</p>
 <p id="address">
     <span>Mobile: 083-441-0345 | photius@shannonware.com</span>
     <span>The Shop, Gerahies, Bantry, Co. Cork P75 AK37, Ireland</span>
@@ -22,9 +22,10 @@
     <div id="skills_left">
         <ul>
             <li>C#: 6-8, LINQ, Visual Studio, Git, CI/CD</li>
-            <li>Python: Flask, Heroku, Hugging Face, Pandas, Ollama</li>
-            <li>JavaScript: Node.js, REACT, ES6</li>
-            <li>SQL: Integrations, PostgreSQL, SQLite</li>
+            <li>Python: JSON, Flask, Heroku, Hugging Face, Pandas</li>
+            <li>JavaScript: JSON, Node.js, Angular, REACT, ES6</li>
+            <li>SQL: Integrations, PostgreSQL, SQLite, SSMS</li>
+            <li>XP, Code Profiling, Agile methodologies, OOP, High velocity IT</li>
         </ul>
     </div>
     <div id="skills_right">
@@ -32,6 +33,7 @@
             <li>Google: Cloud, Analytics, Workspaces, Android</li>
             <li>Linux: Lubuntu, CentOS, Debian, Node.js, VS Code for Linux</li>
             <li>Microsoft: RDP, Azure, Office, Excel, Word, Team, PowerPoint</li>
+            <li>SQL Server 2022, SQL Server Management Studio, Office365</li>
             <li>OBS, Audacity, Davinci Resolve, PyAudio</li>
         </ul>
     </div>
@@ -210,6 +212,19 @@
     <li>Japanese work environment teamwork exercises</li>
 </ul>
 
+
+
+<h3>Languages</h3>
+
+<p>
+    English: Native speaker, university graduate, copywriter
+</p>
+<p>
+    Japanese: Fluent, proofreading, business correspondence
+</p>
+<p>
+    German: A2 equivalent
+</p>
 
 
 {% endblock %}
