--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,14 @@
 <ul>
     <li><a href="/curriculum-vitae">Shannon Ware CV</a></li>
 </ul>
+<h3>Portfolio</h3>
+<ul>
+    <li><a href="/portfolio">Data Engineeering Portfolio</a></li>
+</ul>
 <h3>Interview</h3>
 <ul>
     <li><a href="/problems-solved">Problems Solved</a></li>
+    <li><a href="/one-page-javascript">One Page: JavaScript</a></li>
 </ul>
 <!-- h3>Resumes</h3>
 <ul>
