--- a/templates/curriculum-vitae.html
+++ b/templates/curriculum-vitae.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Shannon Douglas Ware - CV - IT Support Specalist - Reperio Human Capital (Ireland) Ltd</title>
+<title>Shannon Douglas Ware - CV - Cirriculum Vitae</title>
 
 {% endblock %}
 
 {% block body %}
 
-<p id="occupation">IT Support Specalist</p>
+<p id="occupation">Cirriculum Vitae</p>
 <p id="address">
     <span>Mobile: 083-441-0345 | photius@shannonware.com</span>
     <span>The Shop, Gerahies, Bantry, Co. Cork P75 AK37, Ireland</span>
@@ -18,25 +18,19 @@
 <p>Shannon has a demonstrated ability reduce cost while improving production service quality.</p>
 <!-- p>Shannon has a deep knowledge of industry analytical tools and methods including open source (Python) integration with proprietary tools (Microsoft).</p -->
 <h2>Skills</h2>
-<section>
-    <div id="skills_left">
+<section id="skills">
         <ul>
             <li>C#: 6-8, LINQ, Visual Studio, Git, CI/CD</li>
             <li>Python: JSON, Flask, Heroku, Hugging Face, Pandas</li>
             <li>JavaScript: JSON, Node.js, Angular, REACT, ES6</li>
             <li>SQL: Integrations, PostgreSQL, SQLite, SSMS</li>
             <li>XP, Code Profiling, Agile methodologies, OOP, High velocity IT</li>
-        </ul>
-    </div>
-    <div id="skills_right">
-        <ul>
             <li>Google: Cloud, Analytics, Workspaces, Android</li>
             <li>Linux: Lubuntu, CentOS, Debian, Node.js, VS Code for Linux</li>
             <li>Microsoft: RDP, Azure, Office, Excel, Word, Team, PowerPoint</li>
             <li>SQL Server 2022, SQL Server Management Studio, Office365</li>
             <li>OBS, Audacity, Davinci Resolve, PyAudio</li>
         </ul>
-    </div>
 </section>
 <h3>Projects</h3>
 
@@ -85,6 +79,7 @@
     <li>Complete point of sale transactions with handheld payment device.</li>
     <li>Ensure customer goods maintain all required quality standards and specifications</li>
     <li>Assist end-users with online account merchant, banking, and e-government account configuration</li>
+    <li>Conduct business continuity planning for small business customers; data recovery and device recovery</li>
 </ul>
 
 
@@ -113,6 +108,7 @@
     <li>L2 Help Desk: Provided hands-on support; conducted customer issue root cause investigation; executed service delivery audit processes</li>
     <li>L3 Help Desk: Made accurate records of service performance for monthly reports</li>
     <li>Execute backend query, render results as meaningful data for data-driven decision making</li>
+    <li>Review and validate plans for disaster recovery (data centre redundancy); proactive participation in fire drills</li>
 </ul>
 
 <p class="entry_headline">
@@ -184,8 +180,8 @@
     <span class="entry_date">2007</span>
 <ul>
     <li>Protype game development (Virtools, Flash)</li>
-    <li>In game mod asset development for real time first person shooter (Steam Source HL2)</li>
-    <li>Boardgame design, concept develpment, product development and packaging</li>
+    <li>In game mod asset development for real-time first-person shooter (Steam Source HL2)</li>
+    <li>Boardgame design, concept development, product development and packaging</li>
     <li>Game design development - fundraising collateral</li>
     <li>Character design, concept development, wireframe animation and rendering</li>
 
