Update skills two column display from div-based separation to css column directive. f barista cv

--- a/templates/barista.html
+++ b/templates/barista.html
@@ -18,23 +18,17 @@
 <p>Shannon has a demonstrated ability reduce cost while improving production service quality.</p>
 <!-- p>Shannon has a deep knowledge of industry analytical tools and methods including open source (Python) integration with proprietary tools (Microsoft).</p -->
 <h2>Skills</h2>
-<section>
-    <div id="skills_left">
-        <ul>
-            <li>Coffee: Espresso, cappuccino, latte, americano, macchiato</li>
-            <li>Tea: Black, Earl Grey, English Breakfast, Herbal, Green, White</li>
-            <li>Cafe Management: Hygiene, till management, drinks service</li>
-            <li>Customer Service: Active listening, overcoming objections</li>
-        </ul>
-    </div>
-    <div id="skills_right">
-        <ul>
-            <li>Retail: Product display, stock rotation</li>
-            <li>Point of Sale: SumUp, in-head arithmetic, till reconciliation</li>
-            <li>Shop Management: Stock ordering, stock projection, inventory</li>
-            <li>Inventory management: Stocktaking, stock ordering</li>
-        </ul>
-    </div>
+<section id="skills">
+    <ul>
+        <li>Coffee: Espresso, cappuccino, latte, americano, macchiato</li>
+        <li>Tea: Black, Earl Grey, English Breakfast, Herbal, Green, White</li>
+        <li>Cafe Management: Hygiene, till management, drinks service</li>
+        <li>Customer Service: Active listening, overcoming objections</li>
+        <li>Retail: Product display, stock rotation</li>
+        <li>Point of Sale: SumUp, in-head arithmetic, till reconciliation</li>
+        <li>Shop Management: Stock ordering, stock projection, inventory</li>
+        <li>Inventory management: Stocktaking, stock ordering</li>
+    </ul>
 </section>
 <h3>Projects</h3>
 
