--- a/templates/curriculum-vitae.html
+++ b/templates/curriculum-vitae.html
@@ -154,7 +154,7 @@
     <span class="entry_description">Visual Sports Systems - Concord, Ontario</span>
     <span class="entry_date">2007-2008</span>
 <ul>
-    <li>Lead custom video game project management and game asset development</li>
+    <li>Lead custom video game project management and game asset development; Mono .NET implementation for MacOS</li>
     <li>Achieved Unity/C# based custom system hardware configuration game development</li>
 
 </ul>
