--- a/templates/curriculum-vitae.html
+++ b/templates/curriculum-vitae.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Shannon Douglas Ware - CV - Cirriculum Vitae</title>
+<title>Shannon Douglas Ware - CV - Curriculum Vitae</title>
 
 {% endblock %}
 
 {% block body %}
 
-<p id="occupation">Cirriculum Vitae</p>
+<p id="occupation">Curriculum Vitae</p>
 <p id="address">
     <span>Mobile: 083-441-0345 | photius@shannonware.com</span>
     <span>The Shop, Gerahies, Bantry, Co. Cork P75 AK37, Ireland</span>
@@ -208,7 +208,12 @@
     <li>Japanese work environment teamwork exercises</li>
 </ul>
 
-
+<h3>Certifications</h3>
+<p>Ireland Driving License: Category B</p>
+<p class="optional_guru optional_support optional_it">ITIL4 High Velocity IT, May 2023</p>
+<p class="optional_support">ITIL4 Foundation, October 2022</p>
+<p class="optional_guru optional_support optional_it">Azure Data Fundamentals June 2022</p>
+<p class="optional_out">Azure Fundamentals, March 2020</p>
 
 <h3>Languages</h3>
 
