At your service changed to hire me, add c sharp one page, hide data analysist portfolio link

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,21 +9,23 @@
 {% block body %}
 
 <img src="/static/shannon-ware-professional-avatar.png" role="avatar" id="avatar"/>
-<h2 class="exo-terzo">At your service!</h2>
+<h2 class="exo-terzo">Hire me!</h2>
     <p>Shannon has a demonstrated ability reduce cost while improving production service quality.</p>
     <p>Shannon has a deep knowledge of industry analytical tools and methods including open source (Python) integration with proprietary tools (Microsoft).</p>
 <h3>Curriculum Vitae</h3>
 <ul>
     <li><a href="/curriculum-vitae">Shannon Ware CV</a></li>
 </ul>
-<h3>Portfolio</h3>
+<!-- h3>Portfolio</h3>
 <ul>
-    <li><a href="/portfolio">Data Engineeering Portfolio</a></li>
-</ul>
+    <li><a href="/portfolio">Data Analysis Portfolio</a></li>
+</ul -->
 <h3>Interview</h3>
 <ul>
     <li><a href="/problems-solved">Problems Solved</a></li>
+    <li><a href="/one-page-csharp">One Page: C#</a></li>
     <li><a href="/one-page-javascript">One Page: JavaScript</a></li>
+    <li><a href="/one-page-sql">One Page: SQL</a></li>
 </ul>
 <!-- h3>Resumes</h3>
 <ul>
