--- a/templates/one-page-javascript.html
+++ b/templates/one-page-javascript.html
@@ -12,7 +12,7 @@
     <p>In the abstract, rest assured that a problem was solved.</p>
 
     <h2>JavaScript One Page</h2>
-    <p>JavaScript operates in the space</p>
+    <p>JavaScript operates. This one page presents points to bear in mind when entering a technical exam.</p>
 
     <h3>Concepts</h3>
 
