--- a/templates/problems-solved.html
+++ b/templates/problems-solved.html
@@ -66,7 +66,7 @@
             <ul>
                 <li>Base domain name ALIAS record to unsecured Heroku DNS target</li>
                 <li>www domain name ALIAS record to secured Heroku DNS target</li>
-                <li>NOT www domain name CNAME record to Heroku App target</li>
+                <li>Wildcard * domain name CNAME record to wildcard Heroku DNS target</li>
             </ul>
         </td>
         <td>General</td>
